# AdventOfCode2018

./: .uuid
AdventOfCode2018/: AdventOfCode2018.cabal  Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  _Day1.hsplay  _Day2.hsplay  _Day3.hsplay  _Day4.hsplay  _Day5.hsplay  _Day6.hsplay  _Day7.hsplay
