name: AdventOfCode2018
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    day3-input.txt
    day4-input.txt
    day1-input.txt
    day2-input.txt
    day5-input.txt
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable AdventOfCode2018
    main-is: Day1.hs
    build-depends:
        split -any,
        base -any,
        parsec -any,
        time -any,
        containers -any
    default-language: Haskell2010
    other-modules:
        Day5
        Day4
        Day2
        Day3

